お問い合わせフォーム更新

--- a/index.html
+++ b/index.html
@@ -220,13 +220,19 @@
             <p class="section__subtitle">Contact</p>
           </div>
           <p class="contact__text">
-            お見積りやご相談は無料です。<br />お気軽にお問い合わせください。
+            お問い合わせは、LINEまたはインスタまで！！
           </p>
           <div class="contact__actions">
-            <a href="tel:0000000000" class="btn btn--primary"
-              >お電話でのお問い合わせ</a
-            >
-            <!-- Placeholder for form or email -->
+            <div class="contact__qr-container">
+                <div class="contact__qr-item">
+                    <img src="assets/LINE_QR.png" alt="LINE QR Code" class="contact__qr-img">
+                    <p>LINE</p>
+                </div>
+                <div class="contact__qr-item">
+                    <img src="assets/Insta_QR.png" alt="Instagram QR Code" class="contact__qr-img">
+                    <p>Instagram</p>
+                </div>
+            </div>
           </div>
         </div>
       </section>
