ボタン押下でリンクに飛ぶシステム

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
 
     <main>
       <section class="hero">
+        <div class="hero__contact">
+             <a href="https://lin.ee/xsDqhw7" target="_blank" class="hero__btn hero__btn--line">
+                LINEでお問い合わせ
+            </a>
+            <a href="https://www.instagram.com/shinshu0601?igsh=MWZ1amwzeTlra2xjaA==" target="_blank" class="hero__btn hero__btn--insta">
+                Instagramを見る
+            </a>
+        </div>
         <div class="hero__content">
           <h2 class="hero__title">
             <span class="tategaki">想いをカタチに、</span><br class="sp-only">
@@ -222,16 +230,14 @@
           <p class="contact__text">
             お問い合わせは、LINEまたはインスタまで！！
           </p>
-          <div class="contact__actions">
+            <div class="contact__actions">
             <div class="contact__qr-container">
-                <div class="contact__qr-item">
-                    <img src="assets/LINE_QR.png" alt="LINE QR Code" class="contact__qr-img">
-                    <p>LINE</p>
-                </div>
-                <div class="contact__qr-item">
-                    <img src="assets/Insta_QR.png" alt="Instagram QR Code" class="contact__qr-img">
-                    <p>Instagram</p>
-                </div>
+                <a href="https://lin.ee/xsDqhw7" target="_blank" class="contact__qr-item contact__btn--line">
+                    <p>LINE公式アカウント</p>
+                </a>
+                <a href="https://www.instagram.com/shinshu0601?igsh=MWZ1amwzeTlra2xjaA==" target="_blank" class="contact__qr-item contact__btn--insta">
+                    <p>公式Instagram</p>
+                </a>
             </div>
           </div>
         </div>
