--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <div class="header__inner">
         <h1 class="header__logo">
           <a href="#">
-            株式会社真柊
+            <img src="assets/Shinshu Of Logo_BackGround.png" alt="株式会社真柊 ロゴ">
+            <span>株式会社真柊</span>
           </a>
         </h1>
         <nav class="header__nav">
