モバイル修正v2

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <main>
       <section class="hero">
-        <p class="hero__company-label">株式会社<br class="sp-only">真柊</p>
+        <p class="hero__company-label">株式会社 真柊</p>
         <div class="hero__contact">
              <a href="https://lin.ee/xsDqhw7" target="_blank" class="hero__btn hero__btn--line">
                 LINEでお問い合わせ
