モバイル修正v3

--- a/index.html
+++ b/index.html
@@ -75,11 +75,7 @@
                 </div>
                 <div class="about__content">
                     <p class="about__text">
-                        株式会社真柊（しんしゅう）は大阪府寝屋川市を拠点に、<br>
-                        建築工事・リフォーム・解体工事を中心としたサービスを提供する企業です。<br>
-                        建築関連に加え、不動産や土地に関するご相談、空き家活用のコンサルティング、物件紹介サポートなど、<br>
-                        住まいと暮らしに関わるお困りごとをワンストップでサポートしています。<br>
-                        お客様の「困った」を解決し、「こうしたい」を実現するために、誠心誠意、真心を込めて対応いたします。
+                        株式会社真柊（しんしゅう）は大阪府寝屋川市を拠点に、建築工事・リフォーム・解体工事を中心としたサービスを提供する企業です。建築関連に加え、不動産や土地に関するご相談、空き家活用のコンサルティング、物件紹介サポートなど、住まいと暮らしに関わるお困りごとをワンストップでサポートしています。お客様の「困った」を解決し、「こうしたい」を実現するために、誠心誠意、真心を込めて対応いたします。
                     </p>
                 </div>
             </div>
